--- a/styles.css
+++ b/styles.css
@@ -69,6 +69,9 @@ body {
     border-width: 2px;
     border-left-style: dashed;
 }
+.mutually-exclusive {
+    background: lightcoral;
+}
 #focus_prereq_box {
     background: #FFFFFF;
     width: 100%;
